implemented login functionality, login store

--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -2,12 +2,12 @@
   <form [formGroup]="userFormGroup" (ngSubmit)="onSubmit()">
     <div>
     <mat-form-field>
-      <input matInput placeholder="Login" formControlName="login">
+      <input matInput placeholder="Login" formControlName="login" required>
     </mat-form-field>
     </div>
     <div>
     <mat-form-field>
-      <input matInput placeholder="Password" formControlName="password">
+      <input matInput placeholder="Password" formControlName="password" type="password" required>
     </mat-form-field>
     </div>
     <button mat-button type="submit">Submit</button>
