--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -1,15 +1,17 @@
 <div class="login-form-container">
-  <form [formGroup]="userFormGroup" (ngSubmit)="onSubmit()">
-    <div>
-    <mat-form-field>
-      <input matInput placeholder="Login" formControlName="login" required>
-    </mat-form-field>
-    </div>
-    <div>
-    <mat-form-field>
-      <input matInput placeholder="Password" formControlName="password" type="password" required>
-    </mat-form-field>
-    </div>
-    <button mat-button type="submit">Submit</button>
-  </form>
+  <mat-card id="loginFormCard">
+    <form [formGroup]="userFormGroup" (ngSubmit)="onSubmit()">
+      <div>
+      <mat-form-field>
+        <input matInput placeholder="Login" formControlName="login" required class="loginFormInput">
+      </mat-form-field>
+      </div>
+      <div>
+      <mat-form-field>
+        <input matInput placeholder="Password" formControlName="password" type="password" required class="loginFormInput">
+      </mat-form-field>
+      </div>
+      <button mat-button type="submit" id="loginFormButton">Log In</button>
+    </form>
+  </mat-card>
 </div>
