--- a/src/app/features/shop/shop.component.html
+++ b/src/app/features/shop/shop.component.html
@@ -1,13 +1,16 @@
 <div fxLayout="row">
 
   <app-filters
-    fxFlex="30"
-  ></app-filters>
+    [categories$]="categories$"
+    (filtersChanged$)="onFiltersChanged($event)"
+    fxFlex="30">
+  </app-filters>
 
   <app-products-list
     [products$]="products$"
-    fxFlex="70"
-  ></app-products-list>
+    fxFlex="70">
+  </app-products-list>
 
 </div>
+
 
