--- a/src/app/features/shop/components/products-list/products-list.component.html
+++ b/src/app/features/shop/components/products-list/products-list.component.html
@@ -14,4 +14,5 @@
 <app-products-item
   *ngFor="let product of (products$ | async)"
   [product]="product"
-></app-products-item>
+  (addToCart$)="onAddToCart($event)">
+</app-products-item>
