cart store, add product to cart - requested changes resolved
# Conflicts:
#	src/app/core/@store/reducers/login.reducer.ts

--- a/src/app/features/shop/components/products-list/products-list.component.html
+++ b/src/app/features/shop/components/products-list/products-list.component.html
@@ -14,5 +14,5 @@
 <app-products-item
   *ngFor="let product of (products$ | async)"
   [product]="product"
-  (addToCart$)="onAddToCart($event)">
+  (addToCart)="onAddToCart($event)">
 </app-products-item>
