--- a/src/app/features/shop/shop.component.html
+++ b/src/app/features/shop/shop.component.html
@@ -8,7 +8,7 @@
 
   <app-products-list
     [products$]="products$"
-    (addToCart$)="onAddToCart($event)"
+    (addToCart)="onAddToCart($event)"
     fxFlex="70">
   </app-products-list>
 
