--- a/src/app/features/admin/admin.component.css
+++ b/src/app/features/admin/admin.component.css
@@ -1,6 +1,6 @@
 .container {
-    position: absolute;
-    top: 0;
+    position: fixed;
+    top: 75px;
     bottom: 0;
     left: 0;
     right: 0;
