--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-header [userLogin$] = "userLogin$" 
-[isAuthenticated$] = "isAuthenticated$"
-(logout)="onLogout($event)">
-</app-header>
-<router-outlet></router-outlet>
+<div *ngIf="!(isLoading$ | async)">
+    <app-header [userLogin] = "(user$ | async)?.login" 
+    [isAuthenticated$] = "isAuthenticated$"
+    (logout)="onLogout($event)">
+    </app-header>
+    <router-outlet></router-outlet>
+</div>
