cart page - requested changes resolved

--- a/src/app/features/shop/components/cart-item/cart-item.component.html
+++ b/src/app/features/shop/components/cart-item/cart-item.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="cartItemForm">
-  <mat-card formGroupName="cartItemData">
+  <mat-card>
     <mat-card-content fxLayout="row" fxLayoutAlign="space-between center">
       <div>
         <img
