--- a/src/app/features/shop/components/filters/filters.component.html
+++ b/src/app/features/shop/components/filters/filters.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="filtersForm">
-  <div formGroupName="filtersData" fxLayout='column'>
+  <div fxLayout='column'>
 
     <section class="price-section">
       <mat-form-field class="price-input">
